1.2.0 - in progress
    * added theme preview (slim -p /path/to/theme)
    * added JPEG support for panel image
    * added 'center' background type and 'background_color' option
    * added text shadow
    * added warning when execution of login command fails
    * Fix login failure when no shell specified in /etc/passwd
    * Print error when login command execution fails
    * add XNEST_DEBUG ifdef's to allow for easy debugging
    * Add support for Ctrl-u and Ctrl-w

1.1.0 - 2004.12.09
    * error messages for X11 apps are no longer redirected
      to the log file
    * fixed text position for default theme
    * added configurable shutdown and reboot messages
    * separated 'Enter username' and 'Enter password' messages
      position.
    * due to the previous two points, the theme format has 
      slightly changed
    
1.0.0 - 2004.12.07
    * First public SLiM release